# fraud-fl

./: README.md  pyproject.toml  requirements.in
data/: federated_dataset.py
src/: runner.py
src/model/: model.py  pfl_wrapper.py
src/simulation/: aggregation.py  fed_traning.py  traning.py
src/utils/: graph_dataset_loader.py  model_training_utils.py
